--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@ body, html {height: 150%;}
 
 
 a {color: #73264d; text-decoration: none; border-bottom: 1px solid #CCFF26;}
-a:hover {border-bottom: 1px solid #CCFF26; color: #222}
+a:hover {border-bottom: 1px solid #e6004c; color: #222}
 p {font-weight: 200; font-size: 20px;}
 
 .name {font-family: Playfair Display; font-size: 50px; font-weight: 900; padding-bottom: 20px;}
