--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@ body, html {height: 150%;}
 .wrapper {box-sizing: border-box; background: #66ffd9; box-shadow: 0 0 5px #888; box-shadow: 0 0 5px #888; height: 100%; overflow: auto; }
 
 
-a {color: #fffd; text-decoration: none; border-bottom: 1px solid #CCFF26;}
+a {color: #fff; text-decoration: none; border-bottom: 1px solid #CCFF26;}
 a:hover {border-bottom: 1px solid #e6004c; color: #222}
 p {font-weight: 200; font-size: 20px;}
 
